# ECG-denoising

./: PROJECT_DESCRIPTION.md  PROJECT_MANIFEST.md  PROJECT_STATUS.md  README.md  REPOSITORY_DESCRIPTION.md  STATUS_AND_ROADMAP.md  portfolio_valuation_manifest.json  pyproject.toml
.github/workflows/: notify-living-cv.yml  test.yml
bibliography/: BIBLIOGRAPHY_STATUS.md  references.bib
data_manifest/: PUBLIC_DATASET_DECISION.md  nstdb_phase1_records.csv  physionet_sources.md
docs/: 00_project_scope.md  01_dataset_inventory.md  02_noise_taxonomy.md  03_method_review_matrix.md  04_benchmark_protocol.md  05_roadmap.md  BENCHMARK_PROTOCOL.md  FORWARD_LEARNING_ROADMAP.md  benchmark_readiness_matrix.md  benchmark_roadmap.md  morphology_metric_dictionary.md  noise_taxonomy.md  resilient_sensing_proof_packet.md
fixtures/: benchmark_result.synthetic.json
manuscript/: outline.md
outputs/: example_benchmark_registry.csv  model_comparison_report.md  noise_condition_registry.csv
reports/: benchmark_outlier_detection_task_card.md  benchmark_validation_report.md
schemas/: benchmark_result.schema.json
scripts/: fetch_phase1_data.py  run_nstdb_real_benchmark.py
src/denoise/: __init__.py
src/ecg_denoising/: __init__.py  cfg.py
src/ecg_denoising/bench/: __init__.py  morphology.py  real.py  run.py
src/loaders/: __init__.py
src/metrics/: __init__.py
src/noise/: __init__.py
tests/: test_baseline_output_table.py  test_bench.py  test_classical_filters.py  test_metrics.py  test_morphology_fiducials.py  test_noise.py  test_real_records.py
(+14 files in other folders)
